--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:background="@color/baseColor"
     android:id="@+id/llVideo"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/baseColor"
     tools:context=".Activity.VideoActivity">
 
     <androidx.core.widget.NestedScrollView
@@ -180,40 +180,42 @@
                             android:layout_height="wrap_content"
                             android:orientation="vertical"
                             android:paddingLeft="10dp"
-                            android:paddingRight="10dp"
                             android:paddingTop="13dp"
+                            android:paddingRight="10dp"
                             android:paddingBottom="13dp">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Upload Live Video"
                                 android:layout_marginLeft="15dp"
                                 android:layout_marginTop="10dp"
-                                android:textStyle="bold"
+                                android:text="Upload Live Video"
                                 android:textColor="@color/black"
-                                android:textSize="20dp"/>
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="(Please click demo image and upload your video)"
-                                android:layout_marginLeft="15dp"/>
+                                android:layout_marginLeft="15dp"
+                                android:text="(Please click demo image and upload your video)" />
+
                             <ImageView
                                 android:id="@+id/iv_video"
                                 android:layout_width="match_parent"
                                 android:layout_height="200dp"
                                 android:layout_gravity="center"
                                 android:layout_marginTop="15dp"
-                                android:src="@drawable/livevideo"/>
+                                android:src="@drawable/livevideo" />
 
                             <VideoView
                                 android:id="@+id/vv_video"
-                                android:visibility="gone"
                                 android:layout_width="match_parent"
                                 android:layout_height="200dp"
                                 android:layout_gravity="center"
                                 android:layout_marginTop="15dp"
-                                android:src="@drawable/livevideo"/>
+                                android:src="@drawable/livevideo"
+                                android:visibility="gone" />
 
 
                             <!--<TextView
@@ -255,31 +257,30 @@
                 android:id="@+id/tvContinue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/button_background"
                 android:gravity="center"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:padding="10dp"
                 android:text="Continue"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="15sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <TextView
                 android:id="@+id/tvNext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
                 android:text="NEXT"
                 android:textColor="@color/white"
-                android:layout_gravity="center"
-                android:textSize="16sp"
-                android:layout_marginTop="10dp"
-                />
+                android:textSize="16sp" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
