--- a/app/src/main/res/layout/fragment_loan_request.xml
+++ b/app/src/main/res/layout/fragment_loan_request.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".UI.ActivityPage.LoanRequest.LoanRequestFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:id="@+id/rvRequestLoan"
+        android:layout_marginBottom="60dp"
+        android:layout_marginTop="4dp"/>
 
 </FrameLayout>
