--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -47,5 +47,11 @@
         android:label="Activity"
         tools:layout="@layout/fragment_activity"></fragment>
 
+    <fragment
+        android:id="@+id/navigation_QCoin"
+        android:name="com.textifly.quickmudra.UI.QCoinFragment"
+        android:label="Qcoins"
+        tools:layout="@layout/fragment_q_coin"></fragment>
+
 
 </navigation>
