--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -467,11 +467,11 @@
 
                             </LinearLayout>
 
-                            <TextView
+                            <!--<TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="Feb 03,2022"
-                                />
+                                />-->
 
                             <LinearLayout
                                 android:layout_width="match_parent"
