--- a/app/src/main/res/layout/fragment_q_coin.xml
+++ b/app/src/main/res/layout/fragment_q_coin.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white2"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:orientation="vertical">
 
     <RelativeLayout
@@ -35,28 +35,33 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/llFirst"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_below="@+id/llMenu">
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llSecond"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_below="@+id/llMenu">
-
-
-        </LinearLayout>
-
     </RelativeLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_below="@+id/llMenu">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:layout_gravity="center"
+                android:src="@drawable/dollar"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Total Coins: 200"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:padding="15dp"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
+
+
+        </LinearLayout>
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
