--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -85,7 +85,7 @@
                         android:id="@+id/tvAmount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="₹2000"
+                        tools:text="₹2000"
                         android:padding="5dp"
                         android:gravity="center"
                         android:textStyle="bold"
@@ -116,7 +116,7 @@
                                 android:id="@+id/tvStatus"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:text="Paid"
+                                tools:text="Paid"
                                 android:gravity="center"
                                 android:textStyle="bold"
                                 android:textColor="@color/black"
@@ -142,7 +142,7 @@
                                 android:id="@+id/tvPaidOn"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:text="20-Aug-2021"
+                                tools:text="20-Aug-2021"
                                 android:gravity="center"
                                 android:textStyle="bold"
                                 android:textColor="@color/black"
@@ -180,10 +180,10 @@
                         android:layout_gravity="start"/>
 
                     <TextView
-                        android:id="@+id/tvDisbursedDt"
+                        android:id="@+id/tvDisbursedAmount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="₹2000"
+                        tools:text="₹2000"
                         android:textSize="16sp"
                         android:textColor="@color/black"
                         android:layout_weight="1"
@@ -218,7 +218,7 @@
                         android:id="@+id/tvTotalFee"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="₹240"
+                        tools:text="₹240"
                         android:textSize="16sp"
                         android:textColor="@color/black"
                         android:layout_weight="1"
@@ -253,8 +253,8 @@
                         android:id="@+id/tvIntBefDueDt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="₹2000"
-                        android:textSize="16sp"
+                        tools:text="₹2000"
+                        tools:textSize="16sp"
                         android:textColor="@color/black"
                         android:layout_weight="1"
                         android:gravity="end"/>
@@ -288,7 +288,7 @@
                         android:id="@+id/tvIntAftrDueDt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="₹2000"
+                        tools:text="₹2000"
                         android:textSize="16sp"
                         android:textColor="@color/black"
                         android:layout_weight="1"
@@ -323,7 +323,7 @@
                         android:id="@+id/tvTotalAmountPaid"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="₹2000"
+                        tools:text="₹2000"
                         android:textSize="16sp"
                         android:textColor="@color/black"
                         android:layout_weight="1"
@@ -338,7 +338,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="PAY NOW"
-                android:visibility="gone"
                 android:padding="8dp"
                 android:background="@drawable/button_bg"
                 android:textColor="@color/white"
