--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -67,33 +67,46 @@
                 android:paddingRight="20dp"
                 >
 
-                <FrameLayout
-                    android:id="@+id/fl1"
+                <LinearLayout
+                    android:id="@+id/ll"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp">
+                    android:weightSum="2"
+                    android:orientation="horizontal">
 
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/ivProfile"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:padding="5dp"
-                        android:src="@drawable/ic_z_user" />
+                    <FrameLayout
+                        android:id="@+id/fl1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginTop="5dp">
 
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_gravity="bottom"
-                        android:layout_marginLeft="40dp"
-                        android:padding="5dp"
-                        android:src="@drawable/ic_zedit"
-                        app:tint="@color/black" />
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/ivProfile"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:padding="5dp"
+                            android:src="@drawable/ic_z_user" />
+
+                        <ImageView
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:layout_gravity="bottom"
+                            android:layout_marginLeft="40dp"
+                            android:padding="5dp"
+                            android:src="@drawable/ic_zedit"
+                            app:tint="@color/black" />
+
+
+                    </FrameLayout>
 
                     <LinearLayout
                         android:id="@+id/llLogout"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"
+                        android:layout_gravity="end"
+                        android:gravity="end"
+                        android:layout_weight="1"
                         android:orientation="horizontal"
                         android:padding="20dp">
 
@@ -113,11 +126,11 @@
                             android:textSize="15sp" />
                     </LinearLayout>
 
-                </FrameLayout>
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/llReferal"
-                    android:layout_below="@+id/fl1"
+                    android:layout_below="@+id/ll"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -319,6 +332,33 @@
                         />
                 </LinearLayout>
 
+                <!--<LinearLayout
+                    android:id="@+id/ll9"
+                    android:layout_below="@+id/ll5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp">
+                    <TextView
+                        android:paddingBottom="5dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Password"
+                        android:textSize="10dp"
+                        android:textColor="@color/colorGray"/>
+                    <TextView
+                        android:id="@+id/tvPW"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Enter Your Password "
+                        android:textSize="13sp"
+                        android:inputType="textPassword"
+                        android:textColor="@color/black"
+                        android:layout_marginRight="10dp"
+                        />
+                </LinearLayout>-->
+
                 <View
                     android:id="@+id/v5"
                     android:layout_width="match_parent"
@@ -326,6 +366,7 @@
                     android:layout_below="@+id/ll5"
                     android:layout_marginTop="10dp"
                     android:background="@color/black7" />
+
                 <LinearLayout
                     android:id="@+id/ll6"
                     android:layout_below="@+id/v5"
