--- a/app/src/main/res/layout/fragment_q_coin.xml
+++ b/app/src/main/res/layout/fragment_q_coin.xml
@@ -50,6 +50,7 @@
                 android:src="@drawable/dollar"/>
 
             <TextView
+                android:id="@+id/tvTotalCoin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Total Coins: 200"
