--- a/app/src/main/res/layout/fragment_refer.xml
+++ b/app/src/main/res/layout/fragment_refer.xml
@@ -103,7 +103,7 @@
                             android:id="@+id/tvReferalCode"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="FWT42RFSHR4E4"
+                            tools:text="FWT42RFSHR4E4"
                             android:textAllCaps="true"
                             android:layout_marginTop="10dp"
                             android:textSize="25sp"
