--- a/app/src/main/res/layout/activity_pan_card.xml
+++ b/app/src/main/res/layout/activity_pan_card.xml
@@ -159,7 +159,8 @@
                                 android:hint="PAN Number"
                                 android:background="@drawable/edit_text_background"
                                 android:imeOptions="actionNext"
-                                android:inputType="text"
+                                android:inputType="textCapWords"
+                                android:textAllCaps="true"
                                 android:maxLines="1"
                                 android:textColor="@color/black"
                                 android:textCursorDrawable="@null"
