--- a/app/src/main/res/layout/activity_employment_details.xml
+++ b/app/src/main/res/layout/activity_employment_details.xml
@@ -309,7 +309,7 @@
                             <EditText
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:hint="Exam Year"
+                                android:hint="Last Exam Year"
                                 android:ems="10"
                                 android:layout_marginLeft="15dp"
                                 android:layout_marginRight="15dp"
@@ -340,7 +340,7 @@
                         <com.google.android.material.textfield.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Percentage"
+                            android:hint="Last Exam Percentage"
                             android:ems="10"
                             android:layout_marginLeft="15dp"
                             android:layout_marginRight="15dp"
